--- a/Projekt/Index.html
+++ b/Projekt/Index.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title> Animal Crossing </title>
     <link rel="stylesheet" href="css.css">
     <title>Projekt</title>
   </head>
   <body>
-   
-    <h1>Animal Crossing: New Horizons</h1>
+    <header>
+      <h1>Animal Crossing: New Horizons</h1>
+      <nav>
+        <ul> 
+          <li> 
+            <a href="Index.html">Start</a>
+          </li>
+          <li> 
+            <a href="Villagers.html">Villagers</a>
+          </li>
+          <li> 
+            <a href="FishBugsFossils.html">Fish, Bugs and Fossils</a> 
+          </li>
+        </ul>
+      </nav>
+    </header>
+    
     <form id="searchForm">
       <label for="search">Search villagers</label>
       <div>
